# c-mini-projects

./: .gitignore  README.md
1_spell_checker/: Makefile  README.md  build_and_run.sh  hash_map.c  hash_map.h  linked_list.c  linked_list.h  out.txt  spell_checker.c  test.txt  trie.c  trie.h  utils.c  utils.h
1_spell_checker/data/: test_big.txt  test_small.txt  text_huge.txt
2_httpal/: README.md  build_and_run.sh  httpal  httpal.c  httpal.cpp
2_wave_equation/: README.md  build_and_run.sh  main  main.c  test.c  test.sh
3_chip8/: CMakeLists.txt  README.md  chip8.cpp  chip8.h  main.cpp
3_chip8/games/: clear.ch8
